[gd_scene load_steps=5 format=3 uid="uid://d0sfba78inyln"]

[ext_resource type="Script" path="res://Scripts/TankLegacy.gd" id="1_qq3r5"]
[ext_resource type="PackedScene" uid="uid://7rfkwwydbnmb" path="res://Scenes/Tank.tscn" id="2_8kpeu"]
[ext_resource type="PackedScene" uid="uid://c2txtdlp7v66l" path="res://Scenes/BasicGun.tscn" id="3_axuio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqnnt"]
size = Vector2(38, 53.5)

[node name="TankLegacy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_qq3r5")

[node name="Tank" parent="." instance=ExtResource("2_8kpeu")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -3.25)
shape = SubResource("RectangleShape2D_aqnnt")

[node name="GroundRayRight" type="RayCast2D" parent="."]
position = Vector2(2, 7)
target_position = Vector2(37, 21)

[node name="GroundRayLeft" type="RayCast2D" parent="."]
position = Vector2(-14, 8)
target_position = Vector2(-38, 19)

[node name="RightWallRay" type="RayCast2D" parent="."]
target_position = Vector2(47, 0)

[node name="LeftWallRay" type="RayCast2D" parent="."]
position = Vector2(-13, 1)
target_position = Vector2(-47, -1)

[node name="BasicGun" parent="." instance=ExtResource("3_axuio")]
position = Vector2(-3, -10)

[connection signal="kill" from="." to="." method="_on_kill"]
